[project]
name = "dynasty-of-empires.api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "victorgabrieldeon", email = "victordeonroyale@gmail.com"},
]
dependencies = [
    "prisma>=0.15.0",
    "fastapi>=0.115.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
